# openwebui-client

./: README.md  openwebui_client.py  openwebui_client_tutorial.py  pyproject.toml  requirements.txt
src/openwebui_client/: __init__.py  client.py  messagebuilder.py
